ks8/ms1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms1-service
spec:
  selector:
    app: ms1
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
