ks8/ms2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms2-service
spec:
  selector:
    app: ms2
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3002
