ks8/ms2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ms2-ingress
spec:
  backend:
    serviceName: ms2-service
    servicePort: 80
